[package]
name = "rusty_nail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
diesel = { version = "2.1.1", features = ["postgres"] }
diesel_cli = "2.1.1"
dotenvy = "0.15.0"
listenfd = "1.0.1"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
