[package]
name = "rusty_nail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = { version = "4.3.1", features = ["openssl"]}
diesel = { version = "2.1.1", features = ["postgres", "serde_json", "r2d2", "chrono"] }
diesel_cli = "2.1.1"
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
dotenvy = "0.15.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
openssl = "0.10.57"
r2d2 = "0.8.10"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
